<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/loginHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/logoContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description"
                android:src="@drawable/logo_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bookbyteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="BookByte"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

        <ImageView
            android:layout_weight="3"
            android:id="@+id/clipArt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_clip_art" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingEnd="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/subHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingTop="10dp"
                android:text="Please sign in to continue."
                android:textColor="@color/gray"
                android:textSize="17sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_username_string"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_password_string"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/editTextUsername"
            app:layout_constraintStart_toStartOf="@id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@id/editTextUsername"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="30dp"
            android:text="@string/_forgot_string"
            android:textColor="@color/forgotPasswordColorAccent"
            app:layout_constraintEnd_toEndOf="@id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="178dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="0.6"
            android:background="@drawable/gradient_btn_background"
            android:fontFamily="@font/kumbh_sans_bold"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:cornerRadius="18dp"
            app:drawableEndCompat="@drawable/white_arrow" />

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="true"
            android:focusable="true"
            android:fontFamily="@font/overpass"
            android:onClick="navigateToRegister"
            android:text="Sign Up"
            android:textColor="#FF9457"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
