<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/registerHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/logoContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description"
                android:src="@drawable/logo_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bookbyteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="BookByte"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

        <ImageView
            android:layout_weight="3"
            android:id="@+id/clipArt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_clip_art" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingEnd="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="Create Account"
                android:textColor="@color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_username_string"
            android:inputType="textPersonName"
            android:paddingTop="25dp"
            android:paddingBottom="25dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:paddingTop="25dp"
            android:paddingBottom="25dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_password_string"
            android:inputType="textPassword"
            android:paddingTop="25dp"
            android:paddingBottom="25dp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingTop="25dp"
            android:paddingBottom="25dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinue"
            android:layout_width="178dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_weight="0.8"
            android:background="@drawable/gradient_btn_background"
            android:contextClickable="true"
            android:fontFamily="@font/kumbh_sans_bold"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:cornerRadius="18dp"
            app:drawableEndCompat="@drawable/white_arrow" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Already have an account? "
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:text="Sign in"
            android:textColor="#FF9457"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="navigateToLogin" />

    </LinearLayout>

</LinearLayout>
